--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <section class="header">
         
         <nav>
-            <a href="index.html"><img src="images/logo.jpg"></a>
+            <a href="index.html"><img src="https://drive.google.com/file/d/12yR81sRzpRyXGNKyQuwKqvd317v6GKe9/view?usp=drive_link"></a>
             <div class="nav-links" id="navLinks">  
                 <i class="fa fa-close" onclick="hideMenu()"></i>
                 <ul>
